--- a/AuctionServiceAPI/AuctionServiceAPI.csproj
+++ b/AuctionServiceAPI/AuctionServiceAPI.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.30.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
         <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
   </ItemGroup>
 
   <ItemGroup>
